# Streamlit

./: .gitIgnore  .gitignore  LICENSE.txt  README.md  streamlit_complete_styling.css  streamlit_components.md
StreamlitApp/: .gitignore  PROJECT_EXPLAIN.md  README.md  dashboard_export.xlsx  project_structure.txt  pyproject.toml  requirements.txt
StreamlitApp/examples/: exmple.py
StreamlitApp/pages/Stocks/: Alphabet Inc. (Class A)(GOOGL).xlsx  Apple Inc.(AAPL).csv  README.md  news_sentiment.py  news_sentiment_openai.py  stocks.py
StreamlitApp/pages/Stocks/styles/: dashboard.css
StreamlitApp/pages/Tokyo-Stock-Exchange-Analysis/: tokyo_stock_exchange_analysis.py
StreamlitApp/pages/advanced_dashboard/: advanced_dashboard.py
StreamlitApp/pages/advanced_dashboard/styles/: dashboard.css
StreamlitApp/pages/financial-dashboard/: financial_technical_analysis.py  stocks.py
StreamlitApp/pages/financial-news-sentiment-analysis/: financial_news_sentiment_analysis.py  financial_news_sentiment_analysis_type_ignore.py
StreamlitApp/streamlitapp/: main.py  streamlit_app1.py
StreamlitApp/tests/: test_structure.txt
StreamlitApp/tutorial/: advanced_dashboard.py  dashboard_export.xlsx
StreamlitApp/tutorial/advanced_dashboard/: advanced_dashboard.py
