[tool.poetry]
name = "streamlitapp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false  # ← Best for tutorial projects

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
streamlit = "^1.37.1"
plotly = "^6.0.0"
openpyxl = "^3.1.5"
ollama = "^0.1.6"
pydantic = "^2.11.2"
yfinance = "0.2.40"
gnews = "^0.4.1"
openai = "^1.78.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
